# r2-gtk4

./: Cargo.toml  database.db  diesel.toml
data/: glib-build.txt  preferences.cmb  preferences.ui  preferences_backup.ui  resources.gresource  resources.gresource.xml  window.cmb  window.ui
data/resources/ui/: window.cmb  window.ui  window_backup.ui
migrations/2025-09-22-100208-0000_create_posts/: up.sql
src/: application.rs  backup.rs  backup_application.rs  config.rs  main.rs  schema.rs
src/models/: algorithm.rs  database.rs  mod.rs  opturi.rs  provider.rs  providers.rs  settings.rs
src/widgets/: mod.rs  window.rs
src/widgets/preferences/: backup.rs  mod.rs  window.rs  window_backup.rs
ui/: preferences2.ui  window.cmb  window.ui  window.ui~
